// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> renders properly with default props 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark sticky-top"
>
  <button
    aria-controls="mugStoreNavbar"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#mugStoreNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="mugStoreNavbar"
  >
    <NavLink
      className="navbar-brand"
      to="/"
    >
      Mug Store
    </NavLink>
    <div
      className="navbar-nav"
    >
      <NavLink
        className=" nav-item nav-link"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown
      currencyOptions={Array []}
      currentCurrencyId="0"
      errorMessage=""
      hasLoadFailed={false}
      isCurrenciesLoading={true}
      onCurrencyChange={[MockFunction]}
    />
    <Connect(LoginLogoutBar) />
  </div>
</nav>
`;

exports[`<Navbar /> renders with cart provided 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark sticky-top"
>
  <button
    aria-controls="mugStoreNavbar"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#mugStoreNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="mugStoreNavbar"
  >
    <NavLink
      className="navbar-brand"
      to="/"
    >
      Mug Store
    </NavLink>
    <div
      className="navbar-nav"
    >
      <NavLink
        className=" nav-item nav-link"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/cart"
      >
        Cart
        <span
          className="badge badge-warning ml-1"
        >
          11
        </span>
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown
      currencyOptions={Array []}
      currentCurrencyId="0"
      errorMessage=""
      hasLoadFailed={false}
      isCurrenciesLoading={true}
      onCurrencyChange={[MockFunction]}
    />
    <Connect(LoginLogoutBar) />
  </div>
</nav>
`;

exports[`<Navbar /> renders with currencies dropdown filled with currencies list 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark sticky-top"
>
  <button
    aria-controls="mugStoreNavbar"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#mugStoreNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="mugStoreNavbar"
  >
    <NavLink
      className="navbar-brand"
      to="/"
    >
      Mug Store
    </NavLink>
    <div
      className="navbar-nav"
    >
      <NavLink
        className=" nav-item nav-link"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown
      currencyOptions={
        Array [
          Object {
            "id": "1",
            "name": "CURR1",
          },
          Object {
            "id": "2",
            "name": "CURR2",
          },
        ]
      }
      currentCurrencyId="0"
      errorMessage=""
      hasLoadFailed={false}
      isCurrenciesLoading={false}
      onCurrencyChange={[MockFunction]}
    />
    <Connect(LoginLogoutBar) />
  </div>
</nav>
`;

exports[`<Navbar /> renders with currentUser provided 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark sticky-top"
>
  <button
    aria-controls="mugStoreNavbar"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#mugStoreNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="mugStoreNavbar"
  >
    <NavLink
      className="navbar-brand"
      to="/"
    >
      Mug Store
    </NavLink>
    <div
      className="navbar-nav"
    >
      <NavLink
        className=" nav-item nav-link"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown
      currencyOptions={Array []}
      currentCurrencyId="0"
      errorMessage=""
      hasLoadFailed={false}
      isCurrenciesLoading={true}
      onCurrencyChange={[MockFunction]}
    />
    <Connect(LoginLogoutBar) />
  </div>
</nav>
`;

exports[`<Navbar /> renders with hasCurrenciesLoadFailed and errorCurrenciesLoading provided 1`] = `
<nav
  className="navbar navbar-expand-md navbar-dark bg-dark sticky-top"
>
  <button
    aria-controls="mugStoreNavbar"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#mugStoreNavbar"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="mugStoreNavbar"
  >
    <NavLink
      className="navbar-brand"
      to="/"
    >
      Mug Store
    </NavLink>
    <div
      className="navbar-nav"
    >
      <NavLink
        className=" nav-item nav-link"
        to="/catalog"
      >
        Catalog
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/about"
      >
        About
      </NavLink>
      <NavLink
        className="nav-item nav-link"
        to="/cart"
      >
        Cart
      </NavLink>
    </div>
  </div>
  <div>
    <CurrenciesDropdown
      currencyOptions={Array []}
      currentCurrencyId="0"
      errorMessage="test error"
      hasLoadFailed={true}
      isCurrenciesLoading={false}
      onCurrencyChange={[MockFunction]}
    />
    <Connect(LoginLogoutBar) />
  </div>
</nav>
`;
